[gd_scene load_steps=7 format=3 uid="uid://cylxgd1if3n0t"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_6iubc"]
[ext_resource type="Texture2D" uid="uid://dvnljqtpw3nu3" path="res://assets/sprites/death.png" id="2_3y3ax"]
[ext_resource type="Texture2D" uid="uid://bssrt3asaqbr6" path="res://assets/sprites/intro-button.png" id="3_efm23"]
[ext_resource type="FontFile" uid="uid://dlsvdxtmmnmde" path="res://assets/fonts/IMFellDWPica-Regular.ttf" id="4_eo6d7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_722ai"]
bg_color = Color(0, 0, 0, 0.686275)

[sub_resource type="Theme" id="Theme_npwjt"]

[node name="Death" type="Panel" node_paths=PackedStringArray("score_subtitle")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_722ai")
script = ExtResource("1_6iubc")
score_subtitle = NodePath("Subtitle")

[node name="DeathBackground" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 800.0
texture = ExtResource("2_3y3ax")
stretch_mode = 6

[node name="Button" type="TextureRect" parent="DeathBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.89
anchor_right = 0.5
anchor_bottom = 0.89
offset_left = -160.0
offset_top = -72.0
offset_right = 163.0
offset_bottom = 80.0
texture = ExtResource("3_efm23")
stretch_mode = 5

[node name="TryAgainButton" type="Button" parent="DeathBackground/Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.494
anchor_right = 0.494
offset_left = -183.562
offset_top = 40.0
offset_right = 183.438
offset_bottom = 104.0
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_eo6d7")
theme_override_font_sizes/font_size = 40
text = "Try again"
flat = true

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_top = 64.0
offset_right = 273.0
offset_bottom = 127.0
grow_horizontal = 2
size_flags_vertical = 8
theme = SubResource("Theme_npwjt")
theme_override_fonts/normal_font = ExtResource("4_eo6d7")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]You died."
fit_content = true

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_top = 188.0
offset_right = 273.0
offset_bottom = 251.0
grow_horizontal = 2
size_flags_vertical = 8
theme = SubResource("Theme_npwjt")
theme_override_fonts/font = ExtResource("4_eo6d7")
theme_override_font_sizes/font_size = 24
text = "You survived for X seconds"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="DeathBackground/Button/TryAgainButton" to="." method="_on_try_again_button_pressed"]
