[gd_scene load_steps=11 format=3 uid="uid://dtq5l1ul652um"]

[ext_resource type="Texture2D" uid="uid://kert4br102nv" path="res://assets/sprites/intro.png" id="2_5e32w"]
[ext_resource type="Texture2D" uid="uid://bssrt3asaqbr6" path="res://assets/sprites/intro-button.png" id="3_ii31w"]
[ext_resource type="FontFile" uid="uid://dlsvdxtmmnmde" path="res://assets/fonts/IMFellDWPica-Regular.ttf" id="3_pnpj1"]
[ext_resource type="Texture2D" uid="uid://bwyl8k3gvhl2y" path="res://assets/sprites/eyes.png" id="5_0544c"]
[ext_resource type="Script" path="res://scripts/main_menu.gd" id="5_ohlgh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_722ai"]
bg_color = Color(0, 0, 0, 0.686275)

[sub_resource type="Theme" id="Theme_npwjt"]

[sub_resource type="Animation" id="Animation_kui3k"]
resource_name = "blink"
length = 4.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3.5, 3.55, 3.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Eyes2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.7, 2.75, 3.15, 3.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Eyes3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.45, 1.5, 1.8, 1.85, 4.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Eyes4:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.65, 0.6501, 0.7, 1.05, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_y8gg1"]
resource_name = "blink_2"
length = 4.0
loop_mode = 1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gocn7"]
_data = {
"blink": SubResource("Animation_kui3k"),
"blink_2": SubResource("Animation_y8gg1")
}

[node name="Start" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_722ai")
script = ExtResource("5_ohlgh")

[node name="StartBackground" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 800.0
texture = ExtResource("2_5e32w")
stretch_mode = 6

[node name="Button" type="TextureRect" parent="StartBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.89
anchor_right = 0.5
anchor_bottom = 0.89
offset_left = -160.0
offset_top = -72.0
offset_right = 163.0
offset_bottom = 80.0
texture = ExtResource("3_ii31w")
stretch_mode = 5

[node name="StartButton" type="Button" parent="StartBackground/Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.494
anchor_right = 0.494
offset_left = -183.562
offset_top = 40.0
offset_right = 183.438
offset_bottom = 104.0
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_pnpj1")
theme_override_font_sizes/font_size = 40
text = "Start game"
flat = true

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_top = 64.0
offset_right = 273.0
offset_bottom = 127.0
grow_horizontal = 2
size_flags_vertical = 8
theme = SubResource("Theme_npwjt")
theme_override_fonts/normal_font = ExtResource("3_pnpj1")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Survive the Night"
fit_content = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Eyes1")
libraries = {
"": SubResource("AnimationLibrary_gocn7")
}

[node name="Eyes1" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 432.0
offset_top = 133.0
offset_right = 452.0
offset_bottom = 141.0
texture = ExtResource("5_0544c")
stretch_mode = 5

[node name="Eyes2" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 240.0
offset_top = 152.0
offset_right = 260.0
offset_bottom = 160.0
texture = ExtResource("5_0544c")
stretch_mode = 5

[node name="Eyes3" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 800.0
offset_top = 136.0
offset_right = 820.0
offset_bottom = 144.0
texture = ExtResource("5_0544c")
stretch_mode = 5

[node name="Eyes4" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 992.0
offset_top = 120.0
offset_right = 1012.0
offset_bottom = 128.0
texture = ExtResource("5_0544c")
stretch_mode = 5

[connection signal="pressed" from="StartBackground/Button/StartButton" to="." method="_on_start_button_pressed"]
