[gd_scene load_steps=9 format=3 uid="uid://bjuplon0na42d"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_4p20b"]
[ext_resource type="Texture2D" uid="uid://kert4br102nv" path="res://assets/sprites/intro.png" id="2_lyj2q"]
[ext_resource type="Texture2D" uid="uid://bssrt3asaqbr6" path="res://assets/sprites/intro-button.png" id="3_a6xfu"]
[ext_resource type="FontFile" uid="uid://dlsvdxtmmnmde" path="res://assets/fonts/IMFellDWPica-Regular.ttf" id="4_enub8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_722ai"]
bg_color = Color(0, 0, 0, 0.686275)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ba66y"]

[sub_resource type="Theme" id="Theme_npwjt"]

[sub_resource type="Theme" id="Theme_3hcs0"]

[node name="Win" type="Panel" node_paths=PackedStringArray("score_subtitle")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_722ai")
script = ExtResource("1_4p20b")
score_subtitle = NodePath("Subtitle")

[node name="WinBackground" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1280.0
offset_bottom = 800.0
texture = ExtResource("2_lyj2q")
stretch_mode = 6

[node name="Button" type="TextureRect" parent="WinBackground"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.89
anchor_right = 0.5
anchor_bottom = 0.89
offset_left = -160.0
offset_top = -72.0
offset_right = 163.0
offset_bottom = 80.0
texture = ExtResource("3_a6xfu")
stretch_mode = 5

[node name="WinButton" type="Button" parent="WinBackground/Button"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.494
anchor_right = 0.494
offset_left = -183.562
offset_top = 40.0
offset_right = 183.438
offset_bottom = 104.0
theme_override_colors/font_hover_color = Color(1, 1, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("4_enub8")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_ba66y")
text = "Start again"
flat = true

[node name="Title" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_top = 64.0
offset_right = 273.0
offset_bottom = 127.0
grow_horizontal = 2
size_flags_vertical = 8
theme = SubResource("Theme_npwjt")
theme_override_fonts/normal_font = ExtResource("4_enub8")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]You survived the night"
fit_content = true

[node name="Subtitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -272.0
offset_top = 188.0
offset_right = 273.0
offset_bottom = 251.0
grow_horizontal = 2
size_flags_vertical = 8
theme = SubResource("Theme_3hcs0")
theme_override_fonts/font = ExtResource("4_enub8")
theme_override_font_sizes/font_size = 24
text = "You survived for X seconds"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="WinBackground/Button/WinButton" to="." method="_on_win_button_pressed"]
