extends Panel
	
func _on_start_button_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/main.tscn")

func _on_win_button_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/main.tscn")

func _on_try_again_button_pressed() -> void:
	get_tree().change_scene_to_file("res://scenes/main.tscn")
